--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -7,18 +7,19 @@
         </svg>
       </label>
 
-      <%= form_with url: books_path, method: :get, local: true do %>
+      <%= form_with url: books_path, method: :get, local: true, class: "grid space-y-4 hidden lg:flex" do |f| %>
         <label class="input bg-[#F4F7FF] border-[#CBD5E0] border-2 hidden lg:flex items-center">
-          <%= search_field_tag :query, params[:query], placeholder: "Search", class: "grow py-6 w-full" %>
+          <%= f.text_field :query, value: params[:query], placeholder: "Search books...", class: "grow py-6 w-full" %>
           <div>
-            <button type="submit" class="btn btn-search bg-blue-500 rounded-lg">
+            <%= button_tag type: 'submit', class: "btn btn-search bg-blue-500 rounded-lg flex items-center gap-2 px-4 py-2" do %>
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-search" viewBox="0 0 16 16">
                 <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
               </svg>
-            </button>
+            <% end %>
           </div>
         </label>
       <% end %>
+
     </div>
 
     <div class="navbar-center">
@@ -54,18 +55,21 @@
     </div>
 
   </div>
-  <div class="lg:hidden flex items-center gap-6"> 
-    <label class="input">
-      <svg class="opacity-50" width="24" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-        <g stroke-linejoin="round" stroke-linecap="round" stroke-width="2.5" fill="none" stroke="currentColor">
-          <circle cx="11" cy="11" r="8"></circle>
-          <path d="m21 21-4.3-4.3"></path>
-        </g>
-      </svg>
-      <input data-book-search-target="input" type="search" name="query" value="<%= params[:query] %>" class="grow" placeholder="Search" />
-    </label>
+  <div class="lg:hidden flex items-center gap-6">
+      <%= form_with url: books_path, method: :get, local: true, class: "grid space-y-4 flex" do |f| %>
+        <label class="input">
+          <svg class="opacity-50" width="24" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+            <g stroke-linejoin="round" stroke-linecap="round" stroke-width="2.5" fill="none" stroke="currentColor">
+              <circle cx="11" cy="11" r="8"></circle>
+              <path d="m21 21-4.3-4.3"></path>
+            </g>
+          </svg>
+          <%= f.text_field :query, value: params[:query], placeholder: "Search books...", class: "grow" %>
+        </label>
+      <% end %>
 
-    <div class="ml-auto">
+
+    <div class="ml-auto md:w-56">
       <%= render "select_sort" %>
     </div>
   </div>
