--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -7,15 +7,18 @@
         </svg>
       </label>
 
-      <%= form_with url: books_path, method: :get, local: true, class: "grid space-y-4 hidden lg:flex" do |f| %>
-        <label class="input bg-[#F4F7FF] border-[#CBD5E0] border-2 hidden lg:flex items-center">
-          <%= f.text_field :query, value: params[:query], placeholder: "Search books...", class: "grow py-6 w-full" %>
+      <%= form_with url: books_path, method: :get, local: true, class: "grid space-y-4 hidden lg:flex " do |f| %>
+        <label class="input bg-[#F4F7FF] border-[#CBD5E0] border-2 hidden lg:flex items-center w-96 h-14">
+          <%= f.text_field :query, value: params[:query], placeholder: "Search books...", class: "grow py-6 w-full text-lg pl-2" %>
           <div>
-            <%= button_tag type: 'submit', class: "btn btn-search bg-blue-500 rounded-lg flex items-center gap-2 px-4 py-2" do %>
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-search" viewBox="0 0 16 16">
-                <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
-              </svg>
-            <% end %>
+            <div class="flex items-center justify-center">
+              <%= button_tag type: 'submit', class: "btn btn-search bg-blue-500 rounded-lg flex items-center gap-2" do %>
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-search" viewBox="0 0 16 16">
+                  <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
+                </svg>
+              <% end %>
+
+            </div>
           </div>
         </label>
       <% end %>
