--- a/app/views/books/_drawer_side.html.erb
+++ b/app/views/books/_drawer_side.html.erb
@@ -1,4 +1,4 @@
-<div class="drawer-side" data-book-review-target="drawer">
+<div class="drawer-side z-50" data-book-review-target="drawer">
   <label for="review-drawer" class="drawer-overlay"></label>
   <div class="w-96 p-5 h-full overflow-y-scroll shadow-lg bg-[#F2F2F7] space-y-6 pt-12 mb-4">
     <%= render "review_drawer_header" %>
