--- a/app/views/books/_book.html.erb
+++ b/app/views/books/_book.html.erb
@@ -30,7 +30,9 @@
                             </span>
                             <p>Added by <strong><%= book.user.first_name %></strong></p>
                         </div>
-                        <p class="mt-3 text-xs hidden md:block"><%= book.description.truncate(110) %></p>
+                        <p class="mt-3 text-xs hidden md:block lg:hidden"><%= book.description.truncate(40) %></p>
+                        <p class="mt-3 text-xs hidden lg:block xl:hidden"><%= book.description.truncate(80) %></p>
+                        <p class="mt-3 text-xs hidden xl:block"><%= book.description.truncate(110) %></p>
                     </div>
                     <div class="h-3/4 lg:h-1/4 space-x-2 flex items-center align-center">
                         <span class="text-lg md:text-xl font-semibold">
@@ -59,7 +61,7 @@
                         <% else %>
                             <div class="indicator">
                                 <div class="indicator-item indicator-bottom">
-                                    <span class="badge badge-sm badge-warning">Physical book</span>
+                                    <span class="badge badge-sm badge-warning -z-50">Physical book</span>
                                 </div>
                                 <div>
                                     <button class="btn py-6 rounded-xl bg-blue-500 text-white" disabled>
