--- a/app/views/books/_select_sort.html.erb
+++ b/app/views/books/_select_sort.html.erb
@@ -2,12 +2,16 @@
   <% params.except(:sort_by, :sort_order, :controller, :action).each do |key, value| %>
     <%= hidden_field_tag key, value %>
   <% end %>
+
+  <%# Default descending sort if none is set %>
+  <%= hidden_field_tag :sort_order, "desc" unless params[:sort_order].present? %>
+
   <div class="dropdown dropdown-bottom dropdown-end w-full">
     <div tabindex="0" role="button" class="btn bg-transparent w-full flex justify-start">
       <div class="hidden md:flex items-center justify-start w-4/5 gap-2">
         <span class="text-[#718096]">Sort By:</span>
         <span class="font-semibold">
-          <%= params[:sort_by] == 'title' ? 'Title' : params[:sort_by] == 'date_added' ? 'Date Added' : 'None' %>
+          <%= params[:sort_by] == 'title' ? 'Title' : 'Date Added' %>
         </span>
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-filter" viewBox="0 0 16 16">
@@ -20,30 +24,31 @@
 
       <li>
         <label class="flex items-center gap-2">
-          <%= radio_button_tag :sort_by, "title", params[:sort_by] == "title", onchange: "this.form.submit()", class: "radio" %>
+          <%= radio_button_tag :sort_by, "title", (params[:sort_by] || 'date_added') == "title", onchange: "this.form.submit()", class: "radio" %>
           Title
         </label>
       </li>
       <li>
         <label class="flex items-center gap-2">
-          <%= radio_button_tag :sort_by, "date_added", params[:sort_by] == "date_added", onchange: "this.form.submit()", class: "radio" %>
+          <%= radio_button_tag :sort_by, "date_added", (params[:sort_by] || 'date_added') == "date_added", onchange: "this.form.submit()", class: "radio" %>
           Date Added
         </label>
       </li>
 
       <div class="bg-[#F2F2F7] mt-12">
         <div class="flex">
+          <% is_asc = params[:sort_order] == "asc" %>
+          <% is_desc = !is_asc %>
+
           <div class="py-4 ml-4 w-1/2 flex items-center justify-center space-x-3 text-gray-500 hover:text-orange-100">
             <span class="text-xs">
-                <% is_asc = params[:sort_order] == "asc" %>
-                <label class="flex items-center gap-2 text-xs <%= is_asc ? 'text-orange-500' : 'text-gray-500 hover:text-orange-100' %>">
+              <label class="flex items-center gap-2 text-xs <%= is_asc ? 'text-orange-500' : 'text-gray-500 hover:text-orange-100' %>">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-up" viewBox="0 0 16 16">
-                    <path fill-rule="evenodd" d="M7.646 4.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 5.707l-5.646 5.647a.5.5 0 0 1-.708-.708z"/>
+                  <path fill-rule="evenodd" d="M7.646 4.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 5.707l-5.646 5.647a.5.5 0 0 1-.708-.708z"/>
                 </svg>
                 <%= radio_button_tag :sort_order, "asc", is_asc, onchange: "this.form.submit()", class: "hidden" %>
                 Ascending
-                </label>
-
+              </label>
             </span>
           </div>
 
@@ -51,15 +56,13 @@
 
           <div class="px-3 py-4 mr-4 w-1/2 flex items-center justify-center space-x-3 text-gray-500 hover:text-orange-100">
             <span class="text-xs">
-                <% is_desc = params[:sort_order] == "desc" %>
-                <label class="flex items-center gap-2 text-xs <%= is_desc ? 'text-orange-500' : 'text-gray-500 hover:text-orange-100' %>">
+              <label class="flex items-center gap-2 text-xs <%= is_desc ? 'text-orange-500' : 'text-gray-500 hover:text-orange-100' %>">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-down" viewBox="0 0 16 16">
-                    <path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708"/>
+                  <path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708"/>
                 </svg>
                 <%= radio_button_tag :sort_order, "desc", is_desc, onchange: "this.form.submit()", class: "hidden" %>
                 Descending
-                </label>
-
+              </label>
             </span>
           </div>
         </div>
