--- a/app/views/books/_review_form.html.erb
+++ b/app/views/books/_review_form.html.erb
@@ -18,7 +18,7 @@
       <%= form.text_area :content, class: "textarea textarea-bordered w-full mt-3", placeholder: "Write your review..." %>
       <div class="flex justify-between mt-4">
         <%= form.submit "Add review", class: "btn bg-blue-500 text-white mt-4 rounded-xl" %>
-        <button class="md:hidden btn text-blue-500 mt-4 rounded-xl ml-auto">Read book</button>
+        <%# <button class="md:hidden btn text-blue-500 mt-4 rounded-xl ml-auto">Read book</button> %>
       </div>
     </div>
   <% end %>
