--- a/app/views/books/_book_grid.html.erb
+++ b/app/views/books/_book_grid.html.erb
@@ -1,5 +1,5 @@
 <div class="pb-10" data-controller="category">
-  <div class="grid grid-cols-6 gap-6" id="books-container">
+  <div class="flex flex-wrap justify-center space-x-5" id="books-container">
     <%= turbo_stream_from 'books', class: "hidden" %>
     <%= render partial: "book", collection: books %>
   </div>
