--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -39,8 +39,8 @@
               </div>
             </div>
             <div class="lg:grid hidden">
-              <p class="font-semibold"><%= current_user.first_name %> <%= current_user.last_name %></p>
-              <p class="small"><%= current_user.email %></p>
+              <p class="font-semibold text-lg"><%= current_user.first_name %> <%= current_user.last_name %></p>
+              <p class="text-gray-500 text-sm"><%= current_user.email %></p>
             </div>
             <div class="lg:block hidden m-auto">
               <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-chevron-down" viewBox="0 0 16 16">
