--- a/app/views/books/_select_sort.html.erb
+++ b/app/views/books/_select_sort.html.erb
@@ -3,14 +3,13 @@
     <%= hidden_field_tag key, value %>
   <% end %>
 
-  <%# Default descending sort if none is set %>
   <%= hidden_field_tag :sort_order, "desc" unless params[:sort_order].present? %>
 
   <div class="dropdown dropdown-bottom dropdown-end w-full">
     <div tabindex="0" role="button" class="btn bg-transparent w-full flex justify-start">
       <div class="hidden md:flex items-center justify-start w-4/5 gap-2">
-        <span class="text-[#718096]">Sort By:</span>
-        <span class="font-semibold">
+        <span class="text-gray-400">Sort By:</span>
+        <span class="font-semibold text-gray-700">
           <%= params[:sort_by] == 'title' ? 'Title' : 'Date Added' %>
         </span>
       </div>
