--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -24,7 +24,7 @@
               <div class="dropdown dropdown-bottom dropdown-end">
                 <div tabindex="0" role="button" class="btn bg-transparent w-fit md:w-32 flex justify-start">
                   <div class="hidden md:flex items-center justify-start w-4/5 gap-2">
-                    <span class="font-semibold">Filter</span>
+                    <span class="font-semibold text-gray-700">Filter</span>
                   </div>
                   <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-funnel" viewBox="0 0 16 16">
                       <path d="M1.5 1.5A.5.5 0 0 1 2 1h12a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-.128.334L10 8.692V13.5a.5.5 0 0 1-.342.474l-3 1A.5.5 0 0 1 6 14.5V8.692L1.628 3.834A.5.5 0 0 1 1.5 3.5zm1 .5v1.308l4.372 4.858A.5.5 0 0 1 7 8.5v5.306l2-.666V8.5a.5.5 0 0 1 .128-.334L13.5 3.308V2z"/>
@@ -34,12 +34,9 @@
                   <li class="w-full flex justify-end">
                     <%= render "reviewer_filter" %>
                   </li>
-
                   <li class="w-full flex justify-end">
                     <%= render "bookmark_filter" %>
                   </li>
-
-
                 </ul>
               </div>
             </div>
@@ -47,7 +44,7 @@
         </div>
       </div>
       <div class="divider"></div>
-      <h2 class="text-xl mb-6 font-semibold">
+      <h2 class="text-2xl text-gray-800 mb-6 font-semibold">
         <% if params[:reviewer_id].present? %>
           <% reviewer = User.find_by(id: params[:reviewer_id]) %>
           <% if reviewer %>
