--- a/app/views/layouts/_drawer.html.erb
+++ b/app/views/layouts/_drawer.html.erb
@@ -14,38 +14,39 @@
                         <img class="h-28 md:h-12 group-hover:h-full transition-all duration-300" alt="rubynor logo hvite forenklet" src="<%= asset_path('Rubynor_logo_200x200.png') %>" />
                     </div>
                 </li>
-                <div class="h-2/6 w-full">
+                <div class="h-2/6 w-full space-y-4">
                     <li class="w-full px-2">
-                        <%= link_to books_path, class: "w-full flex items-center justify-center space-x-2 text-white" do %>
-                            <span>
-                                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="white" class="bi bi-house" viewBox="0 0 16 16">
-                                    <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293zM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5z"/>
-                                </svg>
-                            </span>
-                            <p class="lg:hidden group-hover:inline">Books</p>
-                        <% end %>
-                    </li>
-                    <li class="w-full px-2">
-                        <%= link_to wishes_path, class: "w-full flex items-center justify-center space-x-2 text-white" do %>
-                            <span>
-                                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-list-ul" viewBox="0 0 16 16">
-                                    <path fill-rule="evenodd" d="M5 11.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5m-3 1a1 1 0 1 0 0-2 1 1 0 0 0 0 2m0 4a1 1 0 1 0 0-2 1 1 0 0 0 0 2m0 4a1 1 0 1 0 0-2 1 1 0 0 0 0 2"/>
-                                </svg>
-                            </span>
-                            <p class="lg:hidden group-hover:inline">Wishlist</p>
+                        <%= link_to books_path, class: "w-full flex items-center justify-center space-x-2 hover:bg-transparent hover:text-white #{current_page?(books_path) ? 'text-white' : 'text-gray-200'}" do %>
+                        <span>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-house" viewBox="0 0 16 16">
+                            <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293zM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5z"/>
+                            </svg>
+                        </span>
+                        <p class="lg:hidden group-hover:inline">Books</p>
                         <% end %>
                     </li>
 
+                    <li class="w-full px-2">
+                        <%= link_to wishes_path, class: "w-full flex items-center justify-center space-x-2 hover:bg-transparent hover:text-white #{current_page?(wishes_path) ? 'text-white' : 'text-gray-200'}" do %>
+                        <span>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-tags" viewBox="0 0 16 16">
+                            <path d="M3 2v4.586l7 7L14.586 9l-7-7zM2 2a1 1 0 0 1 1-1h4.586a1 1 0 0 1 .707.293l7 7a1 1 0 0 1 0 1.414l-4.586 4.586a1 1 0 0 1-1.414 0l-7-7A1 1 0 0 1 2 6.586z"/>
+                            <path d="M5.5 5a.5.5 0 1 1 0-1 .5.5 0 0 1 0 1m0 1a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3M1 7.086a1 1 0 0 0 .293.707L8.75 15.25l-.043.043a1 1 0 0 1-1.414 0l-7-7A1 1 0 0 1 0 7.586V3a1 1 0 0 1 1-1z"/>
+                            </svg>
+                        </span>
+                        <p class="lg:hidden group-hover:inline">Wishlist</p>
+                        <% end %>
+                    </li>
                 </div>
+
 
                 <div class="h-1/6 w-full flex flex-col justify-end">
                     <li class="w-full">
-                        <%= link_to new_wish_path, class: "w-full flex items-center justify-center text-white text-sm" do %>
-                            <span>
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bookmark" viewBox="0 0 16 16">
-                                    <path d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v13.5a.5.5 0 0 1-.777.416L8 13.101l-5.223 2.815A.5.5 0 0 1 2 15.5zm2-1a1 1 0 0 0-1 1v12.566l4.723-2.482a.5.5 0 0 1 .554 0L13 14.566V2a1 1 0 0 0-1-1z"/>
-                                </svg>
-                            </span>
+                        <%= link_to new_wish_path, class: "w-full flex items-center justify-center text-white text-sm hover:bg-transparent" do %>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-tag" viewBox="0 0 16 16">
+                                <path d="M6 4.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m-1 0a.5.5 0 1 0-1 0 .5.5 0 0 0 1 0"/>
+                                <path d="M2 1h4.586a1 1 0 0 1 .707.293l7 7a1 1 0 0 1 0 1.414l-4.586 4.586a1 1 0 0 1-1.414 0l-7-7A1 1 0 0 1 1 6.586V2a1 1 0 0 1 1-1m0 5.586 7 7L13.586 9l-7-7H2z"/>
+                            </svg>
                             <p class="lg:hidden group-hover:inline">Add Wish</p>
                         <% end %>
                     </li>
