--- a/app/views/wishes/index.html.erb
+++ b/app/views/wishes/index.html.erb
@@ -1,15 +1,15 @@
 <% content_for :title, "Wishes" %>
 <%= render 'layouts/drawer' do %>
-  <div class="px-12">
+  <div class="px-6 md:px-12">
     <%= render "layouts/wishlist_navbar" %>
 
     <div id="wishes" class="w-full h-full">
       <% if @wishes.any? %>
-        <% @wishes.each do |wish| %>
-          <div class="col-span-6 md:col-span-3 lg:col-span-1 sm:flex-row justify-between items-center pb-5 sm:pb-0 w-full">
+        <div class="flex flex-wrap">
+          <% @wishes.each do |wish| %>
             <%= render wish %>
-          </div>
-        <% end %>
+          <% end %>
+        </div>
       <% else %>
         <div class="w-full h-full flex justify-center items-center">
           <div class="w-70 grid justify-center items-center">
