--- a/app/views/wishes/new.html.erb
+++ b/app/views/wishes/new.html.erb
@@ -1,8 +1,8 @@
 <% content_for :title, "New wish" %>
 
 <%= render 'layouts/drawer' do %>
-  <div class="md:bg-gray-50 h-screen w-full flex items-center justify-center">
-    <div class="bg-white p-8 py-12 rounded-3xl text-gray-200 w-[30rem] overflow-y-scroll max-h-11/12">
+  <div class="h-screen w-full flex items-center justify-center">
+    <div class="border-1 border-gray-100 p-8 py-12 rounded-3xl text-gray-200 w-[30rem] overflow-y-scroll max-h-11/12">
       <div class="text-center mb-12 space-y-3">
         <h2 class="text-gray-700 text-3xl font-extrabold">Create Wish</h2>
         <p class="text-gray-200">Fill out the details of the book below.</p>
