Add or statement

--- a/app/views/layouts/_drawer.html.erb
+++ b/app/views/layouts/_drawer.html.erb
@@ -16,12 +16,12 @@
                 </li>
                 <div class="h-2/6 w-full space-y-4">
                     <li class="w-full px-2">
-                        <%= link_to books_path, class: "w-full flex items-center justify-center space-x-2 hover:bg-transparent hover:text-white #{current_page?(books_path) ? 'text-white' : 'text-gray-200'}" do %>
-                        <span>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-house" viewBox="0 0 16 16">
-                            <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293zM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5z"/>
-                            </svg>
-                        </span>
+                        <%= link_to books_path, class: "w-full flex items-center justify-center space-x-2 hover:bg-transparent hover:text-white #{(current_page?(books_path) || current_page?(root_path)) ? 'text-white' : 'text-gray-200'}" do %>
+                            <span>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-house" viewBox="0 0 16 16">
+                                <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293zM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5z"/>
+                                </svg>
+                            </span>
                         <p class="lg:hidden group-hover:inline">Books</p>
                         <% end %>
                     </li>
